<resources>
    <string name="app_name">Arny</string>
    <string name="error_google_play_services">Your device does not have the necessary Google Play Services features</string>
    <string name="text_welcome">Welcome to Arny</string>
    <string name="button_continue">Continue</string>
    <string name="text_verify_your_number">Enter your phone number below to sign in</string>
    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="error_verify_phone_number">Could not verify phone number. Please try again</string>
    <string name="error_incorrect_code">Incorrect code</string>
    <string name="error_unable_to_connect">Unable to connect. Please check your internet connection and try again</string>
    <string name="label_phone_verification">Phone Verification</string>
    <string name="text_verification_code_sent">Verification Code sent</string>
    <string name="error_creating_account_unknown">Could not create account. Please try again</string>
    <string name="button_verify">Verify</string>
    <string name="timer_resend_code">Resend Code</string>
    <string name="text_verification">Verification</string>
    <string name="text_sending">Sending...</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="firebase_notification_channel_id">firebase_notification</string>
    <string name="action_resend_code">Resend Code</string>
    <string name="error_unknown">Unknown error. Please try again</string>
    <string name="notif_code_resent">Code resent</string>
    <string name="notif_code_sent">Code sent!</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_rides">Rides</string>
    <string name="nav_aryngs">Arnyngs</string>
    <string name="nav_arny_points">Arny Points</string>
    <string name="nav_about">About</string>
</resources>
