<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:id="@+id/root"
    android:fitsSystemWindows="true"
    tools:ignore="ContentDescription">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/text_welcome"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:fontFamily="@font/opensans_regular" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/img_number_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verify_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/grey_80"
                app:ccp_countryPreference="NG"
                app:ccp_hintExampleNumber="true"
                app:ccp_textSize="18sp" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_90"
                android:textStyle="bold"
                tools:text="8107441596">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_primary"
                android:text="@string/button_continue"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/pb_working"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:elevation="20dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>